--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "prisma:studio": "prisma studio"
   },
   "prisma": {
-    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+    "schema": "src/prisma/schema.prisma",
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} src/prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.19.1",
