--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prisma:generate": "prisma db generate",
+    "prisma:generate": "prisma generate",
     "prisma:push": "prisma db push",
     "prisma:pull": "prisma db pull",
     "prisma:seed": "prisma db seed",
@@ -34,6 +34,7 @@
     "lucide-react": "^0.436.0",
     "next": "14.2.7",
     "prisma": "^5.19.1",
+    "qs": "^6.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-use": "^17.5.1",
@@ -46,6 +47,7 @@
     "@faker-js/faker": "^9.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.16.2",
+    "@types/qs": "^6.9.15",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "eslint": "^8.57.0",
