--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-use": "^17.5.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0",
     "vaul": "^0.9.1",
     "zustand": "^4.5.5"
   },
@@ -50,6 +51,7 @@
     "@types/qs": "^6.9.15",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.7",
     "postcss": "^8.4.41",
