--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} src/prisma/seed.ts"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.0.1",
+    "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.19.1",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -33,19 +35,23 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.436.0",
     "next": "14.2.7",
+    "next-themes": "^0.3.0",
     "prisma": "^5.19.1",
     "qs": "^6.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
+    "react-imask": "^7.6.1",
     "react-use": "^17.5.1",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
     "vaul": "^0.9.1",
+    "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
-    "@faker-js/faker": "^9.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.16.2",
     "@types/qs": "^6.9.15",
