--- a/package.json
+++ b/package.json
@@ -29,13 +29,16 @@
     "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@types/nodemailer": "^6.4.16",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "handlebars": "^4.7.8",
     "lucide-react": "^0.436.0",
     "next": "14.2.7",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.15",
     "prisma": "^5.19.1",
     "qs": "^6.13.0",
     "react": "^18.3.1",
