--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "handlebars": "^4.7.8",
     "lucide-react": "^0.436.0",
     "next": "14.2.7",
+    "next-auth": "^4.24.8",
+    "next-nprogress-bar": "^2.3.13",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.15",
     "prisma": "^5.19.1",
