--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^2.28.0",
     "handlebars": "^4.7.8",
+    "input-otp": "^1.2.4",
     "lucide-react": "^0.436.0",
     "next": "14.2.7",
     "next-auth": "^4.24.8",
@@ -44,6 +46,7 @@
     "prisma": "^5.19.1",
     "qs": "^6.13.0",
     "react": "^18.3.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-imask": "^7.6.1",
