Add dynamic-image component with blur placeholder

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@faker-js/faker": "^9.0.1",
     "@hookform/resolvers": "^3.9.0",
+    "@plaiceholder/next": "^3.0.0",
     "@prisma/client": "^5.19.1",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -43,6 +44,7 @@
     "next-nprogress-bar": "^2.3.13",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.15",
+    "plaiceholder": "^3.0.0",
     "prisma": "^5.19.1",
     "qs": "^6.13.0",
     "react": "^18.3.1",
@@ -51,6 +53,7 @@
     "react-hook-form": "^7.53.0",
     "react-imask": "^7.6.1",
     "react-use": "^17.5.1",
+    "sharp": "^0.33.5",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
