--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-imask": "^7.6.1",
+    "react-insta-stories": "^2.7.0",
     "react-use": "^17.5.1",
     "sharp": "^0.33.5",
     "sonner": "^1.5.0",
